--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <!-- Фиксированное видео на фоне -->
     <div class="video">
-        <video class="video_media" src="/media/7946220-uhd_1440_2732_30fps.mp4" autoplay muted loop></video>
+        <video class="video_media" src="media/7946220-uhd_1440_2732_30fps.mp4" autoplay muted loop></video>
     </div>
 
     <!-- Весь прокручиваемый контент -->
@@ -59,7 +59,7 @@
                     <h2 class="num-biserici">
                         Catedrala Ortodoxǎ Sfinții Arhangheli Mihail și Gavriil
                     </h2>
-                    <img src="/media/CatholicTemple.ico" alt="" />
+                    <img src="media/CatholicTemple.ico" alt="" />
                     <a href="https://maps.app.goo.gl/CzB2DnfFgUch1o8F7"
                     ><address class="adresa-bisericii">
                         Strada 22 Decembrie 1989, Sighetu Marmației
@@ -75,7 +75,7 @@
                 <h3 class="num-restaurantului">
                     D & M Wedding Hall (Costin Residence)
                 </h3>
-                <img src="/media/imageSmall Background Removed.png" alt="" />
+                <img src="media/imageSmall Background Removed.png" alt="" />
                 <a href="https://maps.app.goo.gl/ebWnNazvMiBWaHJH9"
                 ><address class="adresa-restaurantului">
                     Strada Sub Deal nr.12, Ilba
