--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <!-- Фиксированное видео на фоне -->
     <div class="video">
-        <video class="video_media" src="media/7946220-uhd_1440_2732_30fps.mp4" autoplay muted loop></video>
+        <video class="video_media" src="аше media/7946220-uhd_1440_2732_30fps.mp4" autoplay muted loop></video>
     </div>
 
     <!-- Весь прокручиваемый контент -->
